// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserAvatar should match snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        class="ant-avatar Avatarstyles-xcn5o4-1 coHzyd ds-avatar ant-avatar-sm ant-avatar-circle"
      >
        <span
          class="ant-avatar-string"
          style="transform: scale(1) translateX(-50%);"
        >
          <div
            class="Iconstyles__IconContainer-aqhvae-0 beTcfQ ds-icon "
            color="#949ea6"
            size="24"
          >
            <svg
              class="user-s"
              viewBox="0 0 24 24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M12 11.5a2.75 2.75 0 112.75-2.75A2.753 2.753 0 0112 11.5zm0-4a1.25 1.25 0 101.25 1.25A1.251 1.251 0 0012 7.5zM16.523 18H7.477A1.476 1.476 0 016 16.529v-.549a3.65 3.65 0 013.657-3.635h4.686A3.65 3.65 0 0118 15.98v.549A1.476 1.476 0 0116.523 18zm-6.866-4.155A2.148 2.148 0 007.5 15.98v.549l9-.029v-.52a2.148 2.148 0 00-2.157-2.135z"
              />
            </svg>
          </div>
        </span>
      </span>
    </div>
  </body>,
  "container": <div>
    <span
      class="ant-avatar Avatarstyles-xcn5o4-1 coHzyd ds-avatar ant-avatar-sm ant-avatar-circle"
    >
      <span
        class="ant-avatar-string"
        style="transform: scale(1) translateX(-50%);"
      >
        <div
          class="Iconstyles__IconContainer-aqhvae-0 beTcfQ ds-icon "
          color="#949ea6"
          size="24"
        >
          <svg
            class="user-s"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 11.5a2.75 2.75 0 112.75-2.75A2.753 2.753 0 0112 11.5zm0-4a1.25 1.25 0 101.25 1.25A1.251 1.251 0 0012 7.5zM16.523 18H7.477A1.476 1.476 0 016 16.529v-.549a3.65 3.65 0 013.657-3.635h4.686A3.65 3.65 0 0118 15.98v.549A1.476 1.476 0 0116.523 18zm-6.866-4.155A2.148 2.148 0 007.5 15.98v.549l9-.029v-.52a2.148 2.148 0 00-2.157-2.135z"
            />
          </svg>
        </div>
      </span>
    </span>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`UserAvatar should match snapshot with user data 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        class="ant-avatar Avatarstyles-xcn5o4-1 gUJWqd ds-avatar ant-avatar-sm ant-avatar-circle"
      >
        <span
          class="ant-avatar-string"
          style="transform: scale(1) translateX(-50%);"
        >
          JD
        </span>
      </span>
    </div>
  </body>,
  "container": <div>
    <span
      class="ant-avatar Avatarstyles-xcn5o4-1 gUJWqd ds-avatar ant-avatar-sm ant-avatar-circle"
    >
      <span
        class="ant-avatar-string"
        style="transform: scale(1) translateX(-50%);"
      >
        JD
      </span>
    </span>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
